feat udistrital/arka_cliente#1122: Registro inmuebles
- Refactor respuesta endpoint elemento_campo
